# dream-state-learning

./: DESIGN_DOC.md  README.md  pyproject.toml  setup_cluster.sh
configs/: alfworld_base.yaml  base.yaml
dream_state/: __init__.py  cli.py  config.py  system.py
dream_state/agent/: __init__.py  react_agent.py
dream_state/environments/: __init__.py  alfworld_env.py  minecraft_sim.py
dream_state/eval/: __init__.py  harness.py
dream_state/memory/: __init__.py  episodic.py  features.py  semantic.py
dream_state/routing/: __init__.py  meta_train.py  policy.py
dream_state/training/: __init__.py  lora_trainer.py  sleep_phase.py
research_notes/: 00_synthesis.md  01_wake_sleep_consolidation.md  02_parametric_memory.md  03_agent_memory_benchmarks.md  04_neuroscience.md  05_learned_retrieval_prior_art.md  06_structural_memory_decision.md  07_attention_control_plane.md  08_memory_substrates.md  09_sleep_consolidation_deep.md  10_world_models_value_mcts.md  11_baselines_benchmarks.md  INDEX.md  JOURNAL.md  RANKED_READING_LIST.md
scripts/: gen_dependency_tasks.py  gen_minecraft_tasks.py  run_ablations.py  run_baselines.py  run_dependency_baseline.py  run_minecraft_baseline.py  submit_cluster.sh
tests/: __init__.py  test_features.py
